middleware implmented and tested on other CRUD API
